# openblog

./: .env.local.example  .env.railway  .env.template  .gitignore  .pre-commit-config.yaml  .railwayignore  AEO_AUDIT_SUMMARY.md  AEO_SCORER_AUDIT_ISSUES.md  AEO_SCORER_DEEP_ANALYSIS.md  AEO_SCORER_FIXES_APPLIED.md  AEO_SCORE_FIX_ANALYSIS.md  AI_ONLY_ARCHITECTURE.md  AI_ONLY_COMPLETE.md  AI_ONLY_CONVERSION_AUDIT.md  AI_ONLY_CONVERSION_COMPLETE.md  ALL_FIXES_APPLIED.md  ALL_FIXES_COMPLETE.md  ALL_ISSUES_FOUND.md  ALL_STAGES_REVIEW_PLAN.md  API_DOCUMENTATION.md  AUDIT_SUMMARY.md  BATCH_TEST_STATUS.md  BATCH_VS_ARTICLE_INSTRUCTIONS.md  BECK_MIGRATION.md  BENCHMARK_RESULTS.md  CITATION_VALIDATION_IMPROVEMENTS.md  CLAUDE.md  CLAUDE_LEGAL.md  COMPANY_CONTEXT_COMPARISON.md  COMPREHENSIVE_BLOG_AUDIT.md  CONTENT_QUALITY_ARCHITECTURE.md  CONTENT_QUALITY_DEEP_ANALYSIS.md  CURRENT_PIPELINE.md  DEEP_INSPECTION_REPORT.md  DEEP_INSPECTION_RESULTS.md  DEEP_INSPECTION_SUMMARY.md  DEEP_ISOLATED_STAGE_INSPECTION.md  DEEP_MANUAL_CONTENT_REVIEW.md  DEEP_SELF_AUDIT.md  DEPLOYMENT_CHECKLIST.md  (+174 more)
beck_extract/: __init__.py  beck_extract.py  beck_extractor.py  beck_models.py
content_plan/: __init__.py  import_plan.py  plan_models.py  plan_parser.py
data/: Braun & Kollegen — Content-Plan 2026.xlsx
docs/: DEPENDENCIES.md  QUALITY_UPGRADE.md
example_results/: article.html  article.json  comparison.md  freibetrag-erbe-vs-schenkung-wo-sind-die-unterschiede.html  freibetrag-erbe-vs-schenkung-wo-sind-die-unterschiede.json  legal_sources.md
service/: api.py  graphics_advanced.py  image_generator.py  (+2 more)
(+220 files in other folders)
