[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blog-writer"
version = "2.0.0"
description = "AI-powered blog article generation system - Stages-based architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.2.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "markdown>=3.5.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.scripts]
openblog = "cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]
storage = [
    "supabase>=2.0.0",
]
image = [
    "replicate>=0.25.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

